Fix header position, z-index property. Set min-width for screen

--- a/tutorial4/style.css
+++ b/tutorial4/style.css
@@ -2,6 +2,8 @@ body {
   padding: 0;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  min-width: 570px;
+  line-height: 23px;
 }
 
 header {
@@ -11,6 +13,7 @@ header {
   text-align: center;
   position: fixed;
   width: 100%;
+  z-index: 99;
 }
 
 .portrait, .title {
@@ -61,7 +64,7 @@ header {
 
 #content {
   background-color: #e8e8e8;
-  padding: 30px 40px;
+  padding: 180px 30px 40px;
 }
 
 .start-of-line {
